# atelier-sophie-synth-solver

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml
atelier-sophie-data/: Cargo.toml
atelier-sophie-data/src/: lib.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs  util.rs
gui/src/components/: cauldron.rs  input.rs  mod.rs  search_settings.rs  shape.rs
gui/src/sections/: cauldron_input.rs  cauldron_preview.rs  goals_input.rs  item_input.rs  material_input.rs  materials_input.rs  mod.rs
synth-brute/: Cargo.toml
synth-brute/benches/: find_optimal.rs
synth-brute/src/: find_optimal.rs  impl_cauldron.rs  impl_color_score_set.rs  impl_coverage.rs  impl_item.rs  impl_material.rs  impl_placement.rs  impl_playfield.rs  impl_shape.rs  impl_shape_neighbours.rs  lib.rs
synth-brute/src/utils/: macros.rs  test_data.rs
synth-brute/tests/: calculate_score.rs  find_optimal.rs
synth-solver/: Cargo.toml
synth-solver/benches/: find_optimal.rs
synth-solver/src/: errors.rs  impl_cauldron.rs  impl_color.rs  impl_color_score_set.rs  impl_coverage.rs  impl_placement.rs  impl_shape.rs  lib.rs  solver.rs
synth-solver/src/solver/: goal_result.rs  mod.rs  progress_tracker.rs
synth-solver/src/utils/: macros.rs  mod.rs  test_data.rs
synth-solver/tests/: calculate_score.rs  find_optimal.rs
test-cli/: Cargo.toml
test-cli/src/: main.rs
