[package]
name = "gui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atelier-sophie-data = { path = "../atelier-sophie-data" }
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.26.2"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
synth-solver = { path = "../synth-solver" }
