[package]
name = "synth-solver"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
itertools = "0.11.0"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "find_optimal"
harness = false
